--- a/AiPlayground.BusinessLogic/AiPlayground.BusinessLogic.csproj
+++ b/AiPlayground.BusinessLogic/AiPlayground.BusinessLogic.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DTOs\RunUpdateDto.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="OpenAI" Version="2.1.0" />
   </ItemGroup>
 
